--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.24.0",
+    "mongodb": "^3.1.13",
     "mysql": "^2.16.0",
+    "swagger-ui-express": "^4.0.2",
     "util": "^0.11.1"
   }
 }
